vrd-private/overlay/skcc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrd-private
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vrd-private
    spec:
      containers:
        - name: vrd-private
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
