vrd-private/overlay/skcc/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vrd-admin
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vrd-admin
    spec:
      containers:
        - name: vrd-admin
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 500m
